--- a/css/desk_layout.css
+++ b/css/desk_layout.css
@@ -105,10 +105,10 @@ h4 {
 }
 
 .primary-content p {
-	padding-right: 100px;
-	padding-left: 100px;
-	margin-bottom: 10px;
-	margin-top: -30px;
+	padding-right: 20px;
+	padding-left: 20px;
+	max-width: 600px;
+	margin: -30px auto 0;
 }
 
 .button{
