--- a/css/layout_DT.css
+++ b/css/layout_DT.css
@@ -131,9 +131,19 @@
 		display: none;
 	}
 
+	.primary-content {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	.primary-content h2 {
+		font-size: 36px;
+		padding-bottom: 24px;
+	}
+
 	.primary-content p {
-		padding-right: 5px;
-		padding-left: 5px;
+		padding-left: 0;
+		padding-right: 0;
 	}
 
 }
