--- a/css/desk_layout.css
+++ b/css/desk_layout.css
@@ -168,7 +168,7 @@ h4 {
 }
 
 .resume-photo {
-	box-shadow: 0 0 5px 5px rgb(0, 0, 0, .3);
+	box-shadow: 0 0 5px 5px rgba(0, 0, 0, .3);
 	max-width: 865px;
 	margin: 10px auto;
 }
